<resources>
    <string name="app_name">Thrifter</string>
    <string name="app_slogan">Find the perfect something</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_result">Search Results</string>
    <string name="title_activity_upload">Upload</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_signup">Register</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_sign_up">REGISTER</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered? Sign in!</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="minimum_password">Password is too short! Must be longer than 6 characters</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>

    <!--Dev strings-->
    <string name="web_client_id">144916866646-6f2gnv6mjk8d4kog9cqnir4h3kqi19sl.apps.googleusercontent.com</string>
</resources>
